--- a/english.html
+++ b/english.html
@@ -415,6 +415,8 @@ Error message and password prompt
 
 <li>Laundry</li>
 
+<li>Lauryn Hill</li>
+
 <li>Lemon cookies</li>
 
 <li>Less is more</li>
@@ -8443,7 +8445,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216170128284" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216171701702" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8452,7 +8454,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Harry Dean Stanton]] [[The Wire]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8472,7 +8474,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216170425482" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216171304065" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9263,7 +9265,7 @@ She's one of the lucky fellows who were raised together in a group, who came fro
  &lt;&lt;heblink [[גורה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213153541799" modified="20200216170102914" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants" title="HaAchim">
+<div created="20200213153541799" modified="20200216172108169" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants" title="HaAchim">
 <pre>[img[pictures/the-brothers.jpg]]
 
 
@@ -9580,6 +9582,14 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
 
 
 
+</pre>
+</div>
+<div created="20200216171746943" modified="20200216172134267" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Lauryn Hill">
+<pre>
+[img[pictures/lauryn-hill.jpg]]
+
+
+ &lt;&lt;heblink [[לורין היל]]&gt;&gt;
 </pre>
 </div>
 <div created="20200216144801309" modified="20200216145115733" tags="Recipes Baking [[Food addicts]]" title="Lemon cookies">
@@ -10518,8 +10528,15 @@ they also said tape''
  &lt;&lt;heblink [[כוכב המשאלות 04]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213170826128" modified="20200213175902300" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Wyclef Jean">
+<div created="20200213170826128" modified="20200216171644894" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Wyclef Jean">
 <pre>[img[pictures/wyclef-jean.jpg]]
+
+
+!!![[Gura]]:
+
+I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he's also a politician, which is kind of [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], but with that being said he was with [[Lauryni|Lauryn Hill]] at the [[Fugees|https://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]].
+
+
 
  &lt;&lt;heblink [[וויקליף ז'אן]]&gt;&gt;
 
