--- a/english.html
+++ b/english.html
@@ -589,6 +589,8 @@ Error message and password prompt
 
 <li>Wishing star 04</li>
 
+<li>With Yoyo in Amsterdam</li>
+
 <li>Wyclef Jean</li>
 
 <li>Yoyo</li>
@@ -8445,7 +8447,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216171701702" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216174333504" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8454,7 +8456,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="" title="$:/StoryList">
+<div list="[[With Yoyo in Amsterdam]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8474,7 +8476,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216171304065" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216173713606" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8760,8 +8762,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
 <div created="20200216150039212" modified="20200216150347339" tags="[[The estate]] [[Food addicts]]" title="Baking">
-<pre>
-[img[pictures/afiya.jpg]]
+<pre>[img[pictures/afiya.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[Baking]]&quot;&gt;&gt;
@@ -8771,8 +8772,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[אפייה]]&gt;&gt;</pre>
 </div>
 <div created="20191113143329168" modified="20200216162219609" tags="music [[outer sisters]]" title="Berry Sakharof">
-<pre>
-[img[pictures/berry-sakharof.jpg]]
+<pre>[img[pictures/berry-sakharof.jpg]]
 
 
 !!![[Yoyo]]:
@@ -8834,8 +8834,7 @@ When a Coen sister is asked what kind of animal is she, she immediately answers-
 </pre>
 </div>
 <div created="20200215215749574" modified="20200215220014963" tags="[[Food addicts]] Recipes [[Vegan recipes]]" title="Cauliflower in a frying Pan">
-<pre>
-[img[pictures/kruvit-bamachvat.jpg]]
+<pre>[img[pictures/kruvit-bamachvat.jpg]]
 
 
  &lt;&lt;heblink [[כרובית במחבת]]&gt;&gt;
@@ -9079,8 +9078,7 @@ She was four-year-old when I was born, and shortly after my birth, my parents no
 </pre>
 </div>
 <div created="20200215220237328" modified="20200215220407549" tags="[[Outer sisters]] Music Films [[Iry claims]]" title="David Bowie">
-<pre>
-[img[pictures/david-bowie.jpg]]
+<pre>[img[pictures/david-bowie.jpg]]
 
 
  &lt;&lt;heblink [[דיוויד בואי]]&gt;&gt;
@@ -9164,8 +9162,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
  &lt;&lt;heblink [[אווה כהן]]&gt;&gt;</pre>
 </div>
 <div created="20200215222945436" modified="20200215223116423" tags="[[Iry claims]] [[Monkeys with car keys]] Houses [[On the road to somewhere]]" title="Exile">
-<pre>
-[img[pictures/galoot.jpg]]
+<pre>[img[pictures/galoot.jpg]]
 
 
 
@@ -9201,8 +9198,7 @@ Lately Iry, Eva and I have been working together on MOTHER, GRANDMOTHER AND I, s
 </pre>
 </div>
 <div created="20200215222131458" modified="20200215222759573" tags="[[Outer sisters]] Music [[Iry claims]] [[How many songs can you even invent at all]]" title="Gabriel Fauré">
-<pre>
-[img[pictures/gabriel-faure.jpg]]
+<pre>[img[pictures/gabriel-faure.jpg]]
 
 !!![[Gura]]:
 
@@ -9236,8 +9232,7 @@ Likewise, she thinks that the widening gender-oriented spectrum, has to do with 
 </pre>
 </div>
 <div created="20200215201131691" modified="20200215203650233" tags="[[Coen sister]]" title="Guan-yin">
-<pre>
-[img[pictures/guen-inn.jpg]]
+<pre>[img[pictures/guen-inn.jpg]]
 
 !!![[Gura]]:
 
@@ -9335,8 +9330,7 @@ The [[Hora|https://en.wikipedia.org/wiki/Hora_(dance)]] is danced in a [[circle|
  &lt;&lt;heblink [[סוסים לדבק]]&gt;&gt;</pre>
 </div>
 <div created="20200216163004939" modified="20200216163303279" tags="TV [[TV Series]] Music Houses" title="House">
-<pre>
-[img[pictures/house.jpg]]
+<pre>[img[pictures/house.jpg]]
 
 
 
@@ -9537,8 +9531,7 @@ If you say [[John Goodman|https://www.imdb.com/name/nm0000422/]], even when I'm 
 </pre>
 </div>
 <div created="20200215223401264" modified="20200215225135099" tags="[[Outer sisters]] Metafiction" title="Karl Ove Knausgard">
-<pre>
-[img[pictures/karl-ove.jpg]]
+<pre>[img[pictures/karl-ove.jpg]]
 
 !!![[Yoyo]]:
 
@@ -9584,17 +9577,15 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
 
 </pre>
 </div>
-<div created="20200216171746943" modified="20200216172134267" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Lauryn Hill">
-<pre>
-[img[pictures/lauryn-hill.jpg]]
+<div created="20200216171746943" modified="20200216174606324" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Lauryn Hill">
+<pre>[img[pictures/lauryn-hill.jpg]]
 
 
  &lt;&lt;heblink [[לורין היל]]&gt;&gt;
 </pre>
 </div>
 <div created="20200216144801309" modified="20200216145115733" tags="Recipes Baking [[Food addicts]]" title="Lemon cookies">
-<pre>
-[img[pictures/ugiyot-limon.jpg]]
+<pre>[img[pictures/ugiyot-limon.jpg]]
 
 
  &lt;&lt;heblink [[עוגיות חמאה ולימון]]&gt;&gt;
@@ -9602,8 +9593,7 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
 </pre>
 </div>
 <div created="20200215225741395" modified="20200216144715940" tags="[[The kitchen according to Genevieve]] Kitchens" title="Less is more">
-<pre>
-[img[pictures/less-is-more.jpg]]
+<pre>[img[pictures/less-is-more.jpg]]
 
 !!![[Genevieve]]:
 
@@ -9787,8 +9777,7 @@ We celebrated the first birthday of my sweet Nano on November 1st at my parent's
 </pre>
 </div>
 <div created="20200216145327570" modified="20200216145500173" tags="Recipes Baking" title="Nectarine pie">
-<pre>
-[img[pictures/pie-naktarin.jpg]]
+<pre>[img[pictures/pie-naktarin.jpg]]
 
 
 
@@ -9959,8 +9948,7 @@ For example, I'm proud to say that I don't own a private car, but instead I do p
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
 <div created="20200215213829151" modified="20200215214355784" tags="[[Here in the Ghetto]] Films [[True stories]]" title="Rear Window">
-<pre>
-[img[pictures/rear-window.jpg]]
+<pre>[img[pictures/rear-window.jpg]]
 
 
 !!![[Tomer]]:
@@ -10066,8 +10054,7 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
 </pre>
 </div>
 <div created="20200216151750067" modified="20200216152312443" tags="TV [[TV Series]] [[Outer sisters]]" title="Six feet uner">
-<pre>
-[img[pictures/six-feet-under.jpg]]
+<pre>[img[pictures/six-feet-under.jpg]]
 
 
  &lt;&lt;heblink [[עמוק באדמה]]&gt;&gt;
@@ -10125,8 +10112,7 @@ And I say:
  &lt;&lt;heblink [[משפחת באומן]]&gt;&gt;</pre>
 </div>
 <div created="20200216161009061" modified="20200216161120850" tags="Films [[Outer sisters]]" title="The Big Lebowski">
-<pre>
-[img[pictures/the-big-lebowski.jpg]]
+<pre>[img[pictures/the-big-lebowski.jpg]]
 
 
 
@@ -10178,8 +10164,7 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 </pre>
 </div>
 <div created="20200215220929667" modified="20200215221846210" tags="[[Iry claims]]" title="The Face Directed Outside">
-<pre>
-[img[pictures/im-hapanim-hachuza.jpg]]
+<pre>[img[pictures/im-hapanim-hachuza.jpg]]
 
 !!![[Iry]]:
 
@@ -10293,8 +10278,7 @@ The grass after rain, is greenish green.
 </pre>
 </div>
 <div created="20200216170034035" modified="20200216170120018" tags="TV [[TV Series]]" title="The Wire">
-<pre>
-[img[pictures/the-wire.jpg]]
+<pre>[img[pictures/the-wire.jpg]]
 
  &lt;&lt;heblink [[הסמויה]]&gt;&gt;</pre>
 </div>
@@ -10351,8 +10335,7 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
  &lt;&lt;heblink [[עושים שלום]]&gt;&gt;</pre>
 </div>
 <div created="20200215225422814" modified="20200216150154177" tags="[[True stories]] Metafiction [[How many songs can you even invent at all]]" title="To draw">
-<pre>
-[img[pictures/lezayer.jpg]]
+<pre>[img[pictures/lezayer.jpg]]
 
 
  &lt;&lt;heblink [[לצייר]]&gt;&gt;</pre>
@@ -10373,8 +10356,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 </pre>
 </div>
 <div created="20200216145644090" modified="20200216145753663" tags="Baking Recipes [[Food addicts]]" title="Torte">
-<pre>
-[img[pictures/tort.jpg]]
+<pre>[img[pictures/tort.jpg]]
 
 
 
@@ -10383,8 +10365,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
  &lt;&lt;heblink [[טורט]]&gt;&gt;</pre>
 </div>
 <div created="20200216152327999" modified="20200216152608194" tags="TV [[TV Series]] [[Food addicts]] [[How many songs can you even invent at all]]" title="True blood">
-<pre>
-[img[pictures/true-blood.jpg]]
+<pre>[img[pictures/true-blood.jpg]]
 
 
 
@@ -10422,8 +10403,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 </pre>
 </div>
 <div created="20200215220525905" modified="20200215221439470" tags="[[The team]] Meals [[Food addicts]] [[How many songs can you even invent at all]] Kitchens" title="Vegan recipes">
-<pre>
-[img[pictures/vegan.jpg]]
+<pre>[img[pictures/vegan.jpg]]
 
 
 
@@ -10432,10 +10412,20 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
  &lt;&lt;heblink [[מתכונים טבעוניים]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213171604745" modified="20200213171814296" tags="[[Outer sisters]]" title="Vincent Van Gogh">
+<div created="20200213171604745" modified="20200216174405367" tags="[[Outer sisters]]" title="Vincent Van Gogh">
 <pre>[img[pictures/van-goch.jpg]]
 
-&lt;&lt;list-links filter:&quot;[tag[Vincent Van Gogh ]]&quot;&gt;&gt;
+
+!!![[Gura]]:
+
+Yes, speaking of tall trees, I allow myself to include dear [[Vincent|https://en.wikipedia.org/wiki/Vincent_van_Gogh]] in the [[outer sisters' list|Outer sisters]]. We love to rely on [[tall trees|https://www.vangoghgallery.com/index.html]].
+
+Moreover, I allowed myself to paint him, with humbleness, in order to say- Van Gogh really [[made me wanna paint|With Yoyo in Amsterdam]].
+After [[Dandan went]], I was left alone in that huge room, and I [[emptied it|Changing]] almost completely.
+I brought a giant table into the room, which Alfred and Dandan built. On the table there are the computer, canvases, crown colors etc.
+If I need anything, I message friends on [[Etherpad|https://etherpad.org/]].
+
+
 
 
  &lt;&lt;heblink [[וינסנט ואן-גוך]]&gt;&gt;</pre>
@@ -10526,6 +10516,15 @@ they also said tape''
 
 
  &lt;&lt;heblink [[כוכב המשאלות 04]]&gt;&gt;
+</pre>
+</div>
+<div created="20200216174503612" modified="20200216174631485" tags="[[I would like to apologize]] [[The archive's trustees]] [[Coen sister]] Metafiction" title="With Yoyo in Amsterdam">
+<pre>
+[img[pictures/amsterdam-im-yoyo.jpg]]
+
+
+ &lt;&lt;heblink [[עם יויו באמסטרדם]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200213170826128" modified="20200216171644894" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Wyclef Jean">
