--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עם יויו באמסטרדם]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216171733123" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216173553680" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14444,7 +14444,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 פותחים חתכים עם סכין בגב הדג, מפזרים מעל הדג מלח ים גס ופלפל שחור גרוס, עוטפים בנייר האלומינום, ואופים בתנור שחומם מראש ל-180 מעלות צלזיוס עשרים- עשרים וחמש דקות.</pre>
 </div>
-<div created="20170602125241296" modified="20200216172028660" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="לורין היל">
+<div created="20170602125241296" modified="20200216174920781" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="לורין היל">
 <pre>[img[pictures/lauryn-hill.jpg]]
 
 !!![[גורה]]:
@@ -16610,7 +16610,7 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[The Face Directed Outside]]&gt;&gt;</pre>
 </div>
-<div created="20170601232601606" modified="20180125165934737" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="עם יויו באמסטרדם">
+<div created="20170601232601606" modified="20200216174948785" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[גורה]]:
@@ -16629,7 +16629,12 @@ __אופן ההכנה:__
 I wanna dedicate this song, Gone 'Til November...
 To all you ladies out there, crying all alone in your room
 And all you fellas, going down south...Not making it back...
-May the lord bless your soul, I love you girl</pre>
+May the lord bless your soul, I love you girl
+
+
+
+&lt;&lt;englink [[With Yoyo in Amsterdam]]&gt;&gt;
+</pre>
 </div>
 <div created="20180214165830427" modified="20200216152101710" tags="סדרות [[אחיות חוץ]] טלוויזיה" title="עמוק באדמה">
 <pre>[img[pictures/six-feet-under.jpg]]
