--- a/english.html
+++ b/english.html
@@ -8456,7 +8456,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[With Yoyo in Amsterdam]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Wes Anderson]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8476,7 +8476,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216173713606" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216175059899" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10445,8 +10445,15 @@ Only in the taxi on the way back to the airport, the driver, who figured we live
  &lt;&lt;heblink [[נסענו לאזכרה של אימא]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213175731975" modified="20200213175948693" tags="[[Outer sisters]] Films" title="Wes Anderson">
+<div created="20200213175731975" modified="20200216175214136" tags="[[Outer sisters]] Films" title="Wes Anderson">
 <pre>[img[pictures/wes-anderson.jpg]]
+
+
+!!![[Gura]]:
+
+I love [[Wes Anderson|https://www.imdb.com/name/nm0027572/]], because he always makes me laugh and makes me happy. Almost every frame of him is surprising, full of imagination, beautiful, smart and symmetric- which is the most important.
+
+
 
  &lt;&lt;heblink [[וס אנדסון]]&gt;&gt;
 </pre>
