--- a/english.html
+++ b/english.html
@@ -8456,7 +8456,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Wes Anderson]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Changing [[Wes Anderson]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8476,7 +8476,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216175059899" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216175654416" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8840,8 +8840,16 @@ When a Coen sister is asked what kind of animal is she, she immediately answers-
  &lt;&lt;heblink [[כרובית במחבת]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213180145409" modified="20200213180416623" tags="Houses [[On the road to somewhere]] [[The archive's trustees]]" title="Changing">
+<div created="20200213180145409" modified="20200216175720420" tags="Houses [[On the road to somewhere]] [[The archive's trustees]]" title="Changing">
 <pre>[img[pictures/meshanim.jpg]]
+
+
+!!![[Gura]]:
+
+Another tendency that [[Yoyo]] and I have is the tendency to move things around the house, surely in horrifying moment like [[Dandan's going|Dandan went]].
+I left on one side of the room a bed and some furniture, and on the other half I put a giant table with the computer and paper sheets and crown colors, and I focus.
+
+
 
  &lt;&lt;heblink [[משנים]]&gt;&gt;</pre>
 </div>
