--- a/english.html
+++ b/english.html
@@ -8456,7 +8456,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Changing [[Wes Anderson]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Northern Exposure]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8476,7 +8476,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216175654416" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216180158197" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9804,8 +9804,18 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 
 </pre>
 </div>
-<div created="20200213180740266" modified="20200213212640944" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
+<div created="20200213180740266" modified="20200216180430013" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
 <pre>[img[pictures/northern-exposure.jpg]]
+
+!!![[Yoyo]]:
+
+[[Cicely|https://northernexposure.fandom.com/wiki/Cicely,_Alaska]] for me is [[a second home|Monkeys with car keys]], and Ed, Joel, Holling, Shelly, Chris, Ruth-Anne, Maggie, Marilyn and the rest of them are -also- my sisters.
+
+[[It's not the thing you fling, it's the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]].
+
+(one of the sole video clips that are still on You Tube)
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[Northern Exposure ]]&quot;&gt;&gt;
 
