--- a/english.html
+++ b/english.html
@@ -8456,7 +8456,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Northern Exposure]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Wes Anderson]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9804,7 +9804,7 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 
 </pre>
 </div>
-<div created="20200213180740266" modified="20200216180430013" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
+<div created="20200213180740266" modified="20200216180821765" tags="[[Outer sisters]] [[TV Series]] TV Films" title="Northern Exposure">
 <pre>[img[pictures/northern-exposure.jpg]]
 
 !!![[Yoyo]]:
@@ -10463,7 +10463,7 @@ Only in the taxi on the way back to the airport, the driver, who figured we live
  &lt;&lt;heblink [[נסענו לאזכרה של אימא]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213175731975" modified="20200216175214136" tags="[[Outer sisters]] Films" title="Wes Anderson">
+<div created="20200213175731975" modified="20200216180847620" tags="[[Outer sisters]] Films" title="Wes Anderson">
 <pre>[img[pictures/wes-anderson.jpg]]
 
 
@@ -10472,8 +10472,8 @@ Only in the taxi on the way back to the airport, the driver, who figured we live
 I love [[Wes Anderson|https://www.imdb.com/name/nm0027572/]], because he always makes me laugh and makes me happy. Almost every frame of him is surprising, full of imagination, beautiful, smart and symmetric- which is the most important.
 
 
+ &lt;&lt;heblink [[וס אנדרסון]]&gt;&gt;
 
- &lt;&lt;heblink [[וס אנדסון]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215164420935" modified="20200215165518955" tags="Once" title="When people were still optimistic">
