--- a/english.html
+++ b/english.html
@@ -283,6 +283,8 @@ Error message and password prompt
 
 <li>blue-marble-hood</li>
 
+<li>Cafe Müller</li>
+
 <li>Cat Sisters</li>
 
 <li>Cauliflower in a frying Pan</li>
@@ -8447,7 +8449,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216174333504" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216183854579" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8456,7 +8458,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Wes Anderson]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Lauryn Hill]] HH [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8476,7 +8478,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216180158197" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216181041888" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8820,6 +8822,18 @@ Is where I want to be
 
 
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
+</div>
+<div created="20200216183951936" modified="20200216184242348" tags="HH" title="Cafe Müller">
+<pre>
+[img[pictures/cafe-muller.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[קפה מילר]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200213183239085" modified="20200213212523487" tags="[[Monkeys with car keys]]" title="Cat Sisters">
 <pre>[img[pictures/achayot-chatul.jpg]]
@@ -9304,11 +9318,13 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 
 </pre>
 </div>
-<div created="20200202172034727" modified="20200202172221953" tags="Metafiction" title="HH">
+<div created="20200202172034727" modified="20200216184415957" tags="Metafiction" title="HH">
 <pre>Happy Hour
 
-[img[pictures/hh.jpg]]
+[img[pictures/HH.jpg]]
 
+
+&lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[HH]]&gt;&gt;
 
@@ -9749,7 +9765,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200212202501397" tags="[[How many songs can you even invent at all]]" title="Music">
+<div created="20200212201643628" modified="20200216184356543" tags="[[How many songs can you even invent at all]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
@@ -9899,8 +9915,20 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
  &lt;&lt;heblink [[פיליפ]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213181241224" modified="20200213181359354" tags="[[Outer sisters]] [[Iry claims]]" title="Pina Bausch">
+<div created="20200213181241224" modified="20200216183823842" tags="[[Outer sisters]] [[Iry claims]]" title="Pina Bausch">
 <pre>[img[pictures/pina-bausch.jpg]]
+
+
+!!![[Iry]]:
+
+[[Pina Bausch|https://en.wikipedia.org/wiki/Pina_Bausch]] and [[Tanztheater Wuppertal|http://www.pina-bausch.de/en/]] members dance. It can be a light running or normal walking or [[rond de jambeen lair|http://www.pina-bausch.de/en/]]
+.
+[[This|https://www.youtube.com/watch?v=LA65HrIMrjs]], for example, is a piece that an ensemble's dancer brought after a vacation, and it got into [[Carnations|https://www.youtube.com/watch?v=CIrRR48s5As]]
+. 
+And [[this|https://www.youtube.com/watch?v=WZd2SkydIXA]] is a performance whose name was used by [[Yoyo]] and [[Gura]], at the time, in [[HH]] - [[Cafe Müller]], as a tribute for the important dancer and choreographer, Pina RIP.
+
+
+
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
@@ -10463,7 +10491,7 @@ Only in the taxi on the way back to the airport, the driver, who figured we live
  &lt;&lt;heblink [[נסענו לאזכרה של אימא]]&gt;&gt;
 </pre>
 </div>
-<div created="20200213175731975" modified="20200216180847620" tags="[[Outer sisters]] Films" title="Wes Anderson">
+<div created="20200213175731975" modified="20200216184210109" tags="[[Outer sisters]] Films" title="Wes Anderson">
 <pre>[img[pictures/wes-anderson.jpg]]
 
 
