--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עם יויו באמסטרדם]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[קפה מילר]] HH [[וס אנדרסון]] [[פינה באוש]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216173553680" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216183840072" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -16610,7 +16610,7 @@ __אופן ההכנה:__
 
 &lt;&lt;englink [[The Face Directed Outside]]&gt;&gt;</pre>
 </div>
-<div created="20170601232601606" modified="20200216174948785" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="עם יויו באמסטרדם">
+<div created="20170601232601606" modified="20200216184034773" tags="[[אחות כהן]] [[נאמני הגנזך]] [[אני רוצה להתנצל]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[גורה]]:
@@ -17800,7 +17800,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170119232802609" modified="20190415192505565" tags="HH מסעדות [[חיות אוכל]] קפה [[בתי קפה]]" title="קפה מילר">
+<div created="20170119232802609" modified="20200216184059778" tags="HH מסעדות [[חיות אוכל]] קפה [[בתי קפה]]" title="קפה מילר">
 <pre>[img[pictures/cafe-muller.jpg]]
 
 !!![[גורה]]:
@@ -17812,6 +17812,9 @@ Fapina''
 :)
 
 ה HAPPY HOUR היומי קורה בקפה מילר, והוא כולל קוקטיילים ומשקאות במחיר מוזל, והופעה של [[אנט ג'מיימה]].
+
+
+&lt;&lt;englink [[Cafe Müller]]&gt;&gt;
 
 
 
