--- a/english.html
+++ b/english.html
@@ -8458,7 +8458,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Lauryn Hill]] HH [[Coen Sisters]]" title="$:/StoryList">
+<div list="blue-marble-hood [[The Big Lebowski]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8478,7 +8478,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216181041888" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216185455028" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8817,8 +8817,15 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
-<div created="20200213181607810" modified="20200213212352870" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
+<div created="20200213181607810" modified="20200216185519050" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]]" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
+
+
+!!![[Iry and Gura]]:
+
+Both of us are excited- to throw a glove on the surface of the global water, and to offer the foundation of the [[blue-marble-hood community|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], as the start of a [[global organization|Imagine]], which people can without religion, race or gender differences join in, if they can withstand the acceptance terms. Moreover, in countries that will declare themselves as blue marble friendly, and as part of the two sides' agreements, the marble people could live a fulfilled life.
+The idea of the blue marble is the continuation of Iry's thoughts of [[the village|Exile]].
+
 
 
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
