--- a/english.html
+++ b/english.html
@@ -8449,7 +8449,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216183854579" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216190001635" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8458,7 +8458,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="blue-marble-hood [[The Big Lebowski]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coffee and Candies]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8478,7 +8478,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216185455028" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216185814658" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8831,8 +8831,7 @@ The idea of the blue marble is the continuation of Iry's thoughts of [[the villa
  &lt;&lt;heblink [[blue-marble-hood]]&gt;&gt;</pre>
 </div>
 <div created="20200216183951936" modified="20200216184242348" tags="HH" title="Cafe Müller">
-<pre>
-[img[pictures/cafe-muller.jpg]]
+<pre>[img[pictures/cafe-muller.jpg]]
 
 
 
@@ -9014,8 +9013,15 @@ Be good.
 
 </pre>
 </div>
-<div created="20200213203133252" modified="20200213203354401" tags="[[Here in the Ghetto]] Coffee [[Food addicts]]" title="Coffee and Candies">
+<div created="20200213203133252" modified="20200216190005092" tags="[[Here in the Ghetto]] Coffee [[Food addicts]]" title="Coffee and Candies">
 <pre>[img[pictures/cafe-vemamtakim.jpg]]
+
+
+!!![[Tomer]]:
+
+It's already November, [[Wyclef|Wyclef Jean]] should have come back by now. It's still hot, but less than before and we no longer sweat. The baby is getting used to the nanny, so I went shopping, I walked through Yehuda ha-Levi st, right on Allenby until 107, and right there at [[Coffee and Candies|https://hamordim.wordpress.com/tag/%D7%A7%D7%A4%D7%94/]] there is a welcoming mister, surrounded by chocolate and coffee grinder. I bought chocolate's bonbons, stuffed with Amarena cherries weighted by the kilo and continued the journey.
+
+
 
  &lt;&lt;heblink [[קפה וממתקים]]&gt;&gt;</pre>
 </div>
@@ -10579,8 +10585,7 @@ they also said tape''
 </pre>
 </div>
 <div created="20200216174503612" modified="20200216174631485" tags="[[I would like to apologize]] [[The archive's trustees]] [[Coen sister]] Metafiction" title="With Yoyo in Amsterdam">
-<pre>
-[img[pictures/amsterdam-im-yoyo.jpg]]
+<pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 
  &lt;&lt;heblink [[עם יויו באמסטרדם]]&gt;&gt;
