--- a/english.html
+++ b/english.html
@@ -361,6 +361,8 @@ Error message and password prompt
 
 <li>Gura</li>
 
+<li>Gura`s tale</li>
+
 <li>HaAchim</li>
 
 <li>Harry Dean Stanton</li>
@@ -507,6 +509,8 @@ Error message and password prompt
 
 <li>Spike Lee</li>
 
+<li>Stories I`ve told Norma</li>
+
 <li>The archive's trustees</li>
 
 <li>The Baumans</li>
@@ -588,6 +592,8 @@ Error message and password prompt
 <li>When there were narrow and long roads</li>
 
 <li>When they said cassette</li>
+
+<li>When they sleep</li>
 
 <li>Wishing star 04</li>
 
@@ -8446,10 +8452,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200212145453041" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200216191410466" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200216190001635" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200216191411768" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8458,7 +8464,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coffee and Candies]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Stories I`ve told Norma]] [[Gura`s tale]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8478,7 +8484,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216185814658" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216191808032" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8763,7 +8769,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[איילה מלאך פיינס]]&gt;&gt;</pre>
 </div>
-<div created="20200216150039212" modified="20200216150347339" tags="[[The estate]] [[Food addicts]]" title="Baking">
+<div created="20200216150039212" modified="20200216191101416" tags="[[The estate]] [[Food addicts]] [[When they sleep]]" title="Baking">
 <pre>[img[pictures/afiya.jpg]]
 
 
@@ -9295,6 +9301,22 @@ She's one of the lucky fellows who were raised together in a group, who came fro
  &lt;&lt;heblink [[גורה]]&gt;&gt;
 </pre>
 </div>
+<div created="20200216190625452" modified="20200216191751667" tags="Mothers Baking Metafiction" title="Gura`s tale">
+<pre>
+[img[pictures/yoyo-mesaper.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[Gura`s tale]]&quot;&gt;&gt;
+
+
+
+ &lt;&lt;heblink [[הסיפור על גורה]]&gt;&gt;
+
+
+
+
+</pre>
+</div>
 <div created="20200213153541799" modified="20200216172108169" tags="[[Here in the Ghetto]] [[Outer sisters]] [[Food addicts]] Meals Restaurants" title="HaAchim">
 <pre>[img[pictures/the-brothers.jpg]]
 
@@ -9778,7 +9800,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
-<div created="20200212201643628" modified="20200216184356543" tags="[[How many songs can you even invent at all]]" title="Music">
+<div created="20200212201643628" modified="20200216192238312" tags="[[How many songs can you even invent at all]]" title="Music">
 <pre>[img[pictures/music.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[Music]]&quot;&gt;&gt;
@@ -9813,7 +9835,7 @@ We celebrated the first birthday of my sweet Nano on November 1st at my parent's
  &lt;&lt;heblink [[ננו שלי ואני]]&gt;&gt;
 </pre>
 </div>
-<div created="20200216145327570" modified="20200216145500173" tags="Recipes Baking" title="Nectarine pie">
+<div created="20200216145327570" modified="20200216191212112" tags="Recipes Baking [[When they sleep]]" title="Nectarine pie">
 <pre>[img[pictures/pie-naktarin.jpg]]
 
 
@@ -10156,6 +10178,15 @@ And I say:
  &lt;&lt;heblink [[ספייק לי]]&gt;&gt;
 </pre>
 </div>
+<div created="20200216190653393" modified="20200216192259572" tags="[[True stories]] Houses" title="Stories I`ve told Norma">
+<pre>
+[img[pictures/sipoorim-lenorma.jpg]]
+
+
+ &lt;&lt;heblink [[סיפורים שסיפרתי לנורמה]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200213163836811" modified="20200213165310346" tags="[[How many songs can you even invent at all]] [[The team]] [[The Baumans]] Metafiction [[Monkeys with car keys]]" title="The archive's trustees">
 <pre>[img[pictures/neemaney.jpg]]
 
@@ -10414,7 +10445,7 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 </pre>
 </div>
-<div created="20200216145644090" modified="20200216145753663" tags="Baking Recipes [[Food addicts]]" title="Torte">
+<div created="20200216145644090" modified="20200216191320983" tags="Baking Recipes [[Food addicts]] [[When they sleep]]" title="Torte">
 <pre>[img[pictures/tort.jpg]]
 
 
@@ -10574,6 +10605,17 @@ they also said tape''
 
  &lt;&lt;heblink [[כשאמרו קסטה]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200216190732892" modified="20200216191000170" tags="Mothers Baking Recipes" title="When they sleep">
+<pre>
+[img[pictures/kesheatem-yeshenim.jpg]]
+
+
+&lt;&lt;list-links filter:&quot;[tag[When they sleep]]&quot;&gt;&gt;
+
+
+&lt;&lt;heblink [[כשהם ישנים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200212154809949" modified="20200212160231559" tags="9-side-wishing-star Laundry" title="Wishing star 04">
