--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קפה מילר]] HH [[וס אנדרסון]] [[פינה באוש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216183840072" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216192041984" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12656,7 +12656,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The Chinese]]&gt;&gt;</pre>
 </div>
-<div created="20170406162100924" modified="20190314144333926" tags="[[מטא בדיון]] אפייה אימהות" title="הסיפור על גורה">
+<div created="20170406162100924" modified="20200216191858559" tags="[[מטא בדיון]] אפייה אימהות" title="הסיפור על גורה">
 <pre>[img[pictures/yoyo-mesaper.jpg]]
 
 שסופר לאווה על ידי יויו
@@ -12669,6 +12669,9 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;list-links filter:&quot;[tag[הסיפור על גורה]]&quot;&gt;&gt;
 
+
+
+&lt;&lt;englink [[Gura`s tale]]&gt;&gt;
 
 
 </pre>
@@ -14314,7 +14317,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;englink [[When there were fewer cars]]&gt;&gt;
 </pre>
 </div>
-<div created="20170624104950750" modified="20190314145637611" tags="מתכונים אימהות אפייה" title="כשהם ישנים">
+<div created="20170624104950750" modified="20200216191426682" tags="מתכונים אימהות אפייה" title="כשהם ישנים">
 <pre>[img[pictures/kesheatem-yeshenim.jpg]]
 
 !!![[אווה]]:
@@ -14331,7 +14334,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-&lt;&lt;list-links filter:&quot;[tag[כשהם ישנים]]&quot;&gt;&gt;</pre>
+&lt;&lt;list-links filter:&quot;[tag[כשהם ישנים]]&quot;&gt;&gt;
+
+
+
+&lt;&lt;englink [[When they sleep]]&gt;&gt;
+</pre>
 </div>
 <div created="20170713143734032" modified="20200215170932579" tags="פעם" title="כשהמכוניות היו יפות">
 <pre>''
@@ -15896,7 +15904,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170507202822300" modified="20180704184451510" tags="[[סיפורים אמיתיים]] בתים" title="סיפורים שסיפרתי לנורמה">
+<div created="20170507202822300" modified="20200216192214693" tags="[[סיפורים אמיתיים]] בתים" title="סיפורים שסיפרתי לנורמה">
 <pre>[img[pictures/sipoorim-lenorma.jpg]]
 
 !!![[אווה]]:
@@ -15910,7 +15918,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-</pre>
+&lt;&lt;englink [[Stories I`ve told Norma]]&gt;&gt;</pre>
 </div>
 <div created="20170407131936343" modified="20180605133320401" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="סלט חסה">
 <pre>[img[pictures/salat-chasa.jpg]]
@@ -17800,7 +17808,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170119232802609" modified="20200216184059778" tags="HH מסעדות [[חיות אוכל]] קפה [[בתי קפה]]" title="קפה מילר">
+<div created="20170119232802609" modified="20200216192139478" tags="HH מסעדות [[חיות אוכל]] קפה [[בתי קפה]]" title="קפה מילר">
 <pre>[img[pictures/cafe-muller.jpg]]
 
 !!![[גורה]]:
