--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הסיפור על גורה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216192041984" title="$:/temp/search">
+<div created="20161023184814872" modified="20200216193517229" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12656,7 +12656,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The Chinese]]&gt;&gt;</pre>
 </div>
-<div created="20170406162100924" modified="20200216191858559" tags="[[מטא בדיון]] אפייה אימהות" title="הסיפור על גורה">
+<div created="20170406162100924" modified="20200216193615793" tags="[[מטא בדיון]] אפייה אימהות" title="הסיפור על גורה">
 <pre>[img[pictures/yoyo-mesaper.jpg]]
 
 שסופר לאווה על ידי יויו
@@ -12672,7 +12672,6 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 &lt;&lt;englink [[Gura`s tale]]&gt;&gt;
-
 
 </pre>
 </div>
@@ -17808,7 +17807,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170119232802609" modified="20200216192139478" tags="HH מסעדות [[חיות אוכל]] קפה [[בתי קפה]]" title="קפה מילר">
+<div created="20170119232802609" modified="20200216193552207" tags="HH מסעדות [[חיות אוכל]] קפה [[בתי קפה]]" title="קפה מילר">
 <pre>[img[pictures/cafe-muller.jpg]]
 
 !!![[גורה]]:
