--- a/english.html
+++ b/english.html
@@ -8464,7 +8464,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Stories I`ve told Norma]] [[Gura`s tale]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The global village]] [[Monkeys with car keys]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8484,7 +8484,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216191808032" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217121047944" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9302,8 +9302,7 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 </pre>
 </div>
 <div created="20200216190625452" modified="20200216191751667" tags="Mothers Baking Metafiction" title="Gura`s tale">
-<pre>
-[img[pictures/yoyo-mesaper.jpg]]
+<pre>[img[pictures/yoyo-mesaper.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[Gura`s tale]]&quot;&gt;&gt;
@@ -9510,7 +9509,7 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
 
  &lt;&lt;heblink [[אירי וגורה]]&gt;&gt;</pre>
 </div>
-<div created="20200213162602188" modified="20200213163043550" tags="[[Iry and Gura]]" title="Iry claims">
+<div created="20200213162602188" modified="20200217121126032" tags="[[Iry and Gura]]" title="Iry claims">
 <pre>[img[pictures/iri-toenet.jpg]]
 
 
@@ -9778,9 +9777,11 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 </pre>
 </div>
-<div created="20200202190317522" modified="20200202190606989" tags="[[TV Series]] TV" title="Monkeys with car keys">
+<div created="20200202190317522" modified="20200217121244735" tags="[[TV Series]] TV" title="Monkeys with car keys">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
+
+&lt;&lt;list-links filter:&quot;[tag[Monkeys with car keys]]&quot;&gt;&gt;
 
 
  &lt;&lt;heblink [[קופים ממונעים]]&gt;&gt;
@@ -10179,8 +10180,7 @@ And I say:
 </pre>
 </div>
 <div created="20200216190653393" modified="20200216192259572" tags="[[True stories]] Houses" title="Stories I`ve told Norma">
-<pre>
-[img[pictures/sipoorim-lenorma.jpg]]
+<pre>[img[pictures/sipoorim-lenorma.jpg]]
 
 
  &lt;&lt;heblink [[סיפורים שסיפרתי לנורמה]]&gt;&gt;
@@ -10283,7 +10283,7 @@ When he said it I thought about my Ethan, my youngest son, and how complicated a
 
 </pre>
 </div>
-<div created="20200213212257979" modified="20200215144046981" tags="[[Monkeys with car keys]] [[Iry and Gura]] [[Iry claims]]" title="The global village">
+<div created="20200213212257979" modified="20200217121209299" tags="[[Monkeys with car keys]] [[Iry and Gura]] [[Iry claims]]" title="The global village">
 <pre>[img[pictures/hacfar-haglobaly.jpg]]
 
 
@@ -10297,6 +10297,8 @@ When we say women we don't mean one gender or another, but the ones who receive,
 
 We'll leave it at that for today.
 
+
+&lt;&lt;list-links filter:&quot;[tag[The global village]]&quot;&gt;&gt;
 
 
  &lt;&lt;heblink [[הכפר הגלובלי]]&gt;&gt;</pre>
@@ -10608,8 +10610,7 @@ they also said tape''
 </pre>
 </div>
 <div created="20200216190732892" modified="20200216191000170" tags="Mothers Baking Recipes" title="When they sleep">
-<pre>
-[img[pictures/kesheatem-yeshenim.jpg]]
+<pre>[img[pictures/kesheatem-yeshenim.jpg]]
 
 
 &lt;&lt;list-links filter:&quot;[tag[When they sleep]]&quot;&gt;&gt;
