--- a/index.html
+++ b/index.html
@@ -9172,10 +9172,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200213214722566" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20200217120132223" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20161023184705203" modified="20200216145910944" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217121014391" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הסיפור על גורה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200216193517229" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217121714643" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9362,7 +9362,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20190221150238201" modified="20200213183429877" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה" title="blue-marble-hood">
+<div created="20190221150238201" modified="20200217120149799" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]] טלוויזיה [[הכפר הגלובלי]]" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
 !!![[אירי וגורה]]:
@@ -9414,7 +9414,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 &lt;&lt;englink [[HH]]&gt;&gt;</pre>
 </div>
-<div created="20170504194252766" modified="20200212174745718" tags="[[כמה שירים כבר אפשר להמציא בכלל]] מוזיקה" title="imagine">
+<div created="20170504194252766" modified="20200217120208806" tags="[[כמה שירים כבר אפשר להמציא בכלל]] מוזיקה [[הכפר הגלובלי]]" title="imagine">
 <pre>[img[pictures/imagine.jpg]]
 
 !!![[האחיות כהן]]:
@@ -10280,7 +10280,7 @@ well,
 
 </pre>
 </div>
-<div created="20170601134808349" modified="20200213163132623" tags="[[אירי וגורה]]" title="אירי טוענת">
+<div created="20170601134808349" modified="20200217120255119" tags="[[אירי וגורה]] [[הכפר הגלובלי]]" title="אירי טוענת">
 <pre>[img[pictures/iri-toenet.jpg]]
 
 !!![[גורה]]:
@@ -10806,7 +10806,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Berry Sakharof]]&gt;&gt;</pre>
 </div>
-<div created="20170806152634013" modified="20170806192815033" tags="[[אירי טוענת]]" title="ברכת השמש">
+<div created="20170806152634013" modified="20200217120342417" tags="[[אירי טוענת]] [[הכפר הגלובלי]]" title="ברכת השמש">
 <pre>[img[pictures/birkat-hashemesh.jpg]]
 
 !!![[אירי]]:
@@ -11631,7 +11631,7 @@ Is where I want to be
 
 עוד [[מזל שכונתי|https://he.wikipedia.org/wiki/%D7%92%D7%9F_%D7%A7%D7%A8%D7%99%D7%99%D7%AA_%D7%A1%D7%A4%D7%A8]] שקיים בזכות תושבי השכונה שעצרו בניית חניון נוסף. </pre>
 </div>
-<div created="20180109154156686" modified="20200208125431972" tags="[[אירי טוענת]] [[בדרך לאן שהוא]]" title="גלגולים">
+<div created="20180109154156686" modified="20200217120412807" tags="[[אירי טוענת]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="גלגולים">
 <pre>[img[pictures/gilgulim.jpg]]
 
 !!![[רוז'ה]]:
@@ -11644,7 +11644,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20200215223240153" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]]" title="גלות">
+<div created="20170105170620001" modified="20200217120425349" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -11693,7 +11693,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20161205195559773" modified="20200215210836542" tags="[[בדרך לאן שהוא]] [[נאמני הגנזך]] חבר" title="גן-יה">
+<div created="20161205195559773" modified="20200217120443194" tags="[[בדרך לאן שהוא]] [[נאמני הגנזך]] חבר [[הכפר הגלובלי]]" title="גן-יה">
 <pre>[img[pictures/gan-ya.jpg]]
 
 !!![[יויו]]:
@@ -12381,7 +12381,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170916144114074" modified="20200212160732908" tags="[[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="הכחול כבר כאן">
+<div created="20170916144114074" modified="20200217120537782" tags="[[סיפורים אמיתיים]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="הכחול כבר כאן">
 <pre>[img[pictures/hacachol-cvar-can.jpg]]
 
 !!![[יויו]]:
@@ -12395,7 +12395,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[The blue is already here]]&gt;&gt;
 </pre>
 </div>
-<div created="20161217212236965" modified="20200213212818378" tags="[[אירי וגורה]] [[קופים ממונעים]] [[אירי טוענת]]" title="הכפר הגלובלי">
+<div created="20161217212236965" modified="20200217120108662" tags="[[אירי וגורה]] [[קופים ממונעים]] [[אירי טוענת]]" title="הכפר הגלובלי">
 <pre>[img[pictures/hacfar-haglobaly.jpg]]
 
 !!![[אירי]] [[וגורה|גורה]]:
@@ -12409,6 +12409,9 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 באומרנו נשים אין אנו מכוונות למגדר כזה או אחר, כי אם מדברות על אלה המקבלות, הנכבשות.
 
 ובזאת תמו דברינו לערב זה.
+
+
+&lt;&lt;list-links filter:&quot;[tag[הכפר הגלובלי]]&quot;&gt;&gt;
 
 
 &lt;&lt;englink [[The global village]]&gt;&gt;</pre>
@@ -13291,7 +13294,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 כיתבו [[טל בייגלס|http://www.tal-bagels.co.il/index.php]] בנווטן, ותגיעו לדירה שלנו בצורה המיטבית -  זה מה שאני אומר למי שרוצה לבוא לבקר אותנו. </pre>
 </div>
-<div created="20190310123955900" modified="20200212211453903" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים" title="טלוויזיה">
+<div created="20190310123955900" modified="20200217120047426" tags="[[כאן בגטו]] [[סיפורים אמיתיים]] [[ילדים חד הוריים]] ילדים" title="טלוויזיה">
 <pre>[img[pictures/television.jpg]]
 
 !!![[תומר]]:
@@ -13483,7 +13486,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180712143703187" modified="20200212165006076" tags="[[מטא בדיון]] [[אחיות חוץ]]" title="כאן בגטו">
+<div created="20180712143703187" modified="20200217121728903" tags="[[מטא בדיון]] [[אחיות חוץ]] [[הכפר הגלובלי]]" title="כאן בגטו">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
 !!![[תומר]]:
@@ -14085,7 +14088,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161113182253178" modified="20200115175908916" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]]" title="כוכב המשאלות בעל תשע הצלעות">
+<div created="20161113182253178" modified="20200217120642595" tags="[[הנחלה בה גדלתי]] [[מטא בדיון]] [[הכפר הגלובלי]]" title="כוכב המשאלות בעל תשע הצלעות">
 <pre>!!![[אווה]]:
 
 זה סיפור שכתבתי בחורף 2016, והוא מתחיל בביקור אצל יויו וגורה בפריז, לארוחת כריסמס 2015
@@ -14154,7 +14157,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 [[אימא שלי|דינה זכרה לברכה]] לא יכלה לסבול כלים בכיור, וגם אני לא יכולה לסבול כלים בכיור, אלא אם הם נקיים מלכלוך שמביא חרקים ומחלות ומלאים במים וסבון. למזלי גם [[יויו]] ירש מאימא את [[המחלה|יסודי או ocd]], [[ואירי|אירי]] היא בכלל מחלה מהלכת. אז זו פינה סגורה [[בדירה|כוכב המשאלות 01]].</pre>
 </div>
-<div created="20200212140900112" modified="20200212195601948" tags="מוזיקה חבר [[בדרך לאן שהוא]]" title="כמה שירים כבר אפשר להמציא בכלל">
+<div created="20200212140900112" modified="20200217120700606" tags="מוזיקה חבר [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="כמה שירים כבר אפשר להמציא בכלל">
 <pre>[img[pictures/kama-shirim.jpg]]
 
 !!![[יויו]]:
@@ -15722,7 +15725,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170914191116661" modified="20191205225732716" tags="[[מטא בדיון]]" title="נשמה">
+<div created="20170914191116661" modified="20200217120810449" tags="[[מטא בדיון]] [[הכפר הגלובלי]]" title="נשמה">
 <pre>[img[pictures/neshama.jpg]]
 
 !!![[נשמה]]:
@@ -16608,7 +16611,7 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20170628145012336" modified="20200215222903825" tags="[[אירי טוענת]]" title="עם הפנים החוצה">
+<div created="20170628145012336" modified="20200217120844336" tags="[[אירי טוענת]] [[הכפר הגלובלי]]" title="עם הפנים החוצה">
 <pre>[img[pictures/im-hapanim-hachuza.jpg]]
 
 !!![[אירי]]:
@@ -17700,7 +17703,7 @@ Fapina''
 
 7. מגישים: על צלחת גדולה ערימת קוסקוס ועליה המרק.</pre>
 </div>
-<div created="20170817155826253" modified="20200207102202765" tags="סדרות טלוויזיה" title="קופים ממונעים">
+<div created="20170817155826253" modified="20200217120916501" tags="סדרות טלוויזיה [[הכפר הגלובלי]]" title="קופים ממונעים">
 <pre>[img[pictures/kofim-memunaim.jpg]]
 
 !!![[יויו]]: 
@@ -17827,7 +17830,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170601134704239" modified="20170606215153088" tags="[[אירי טוענת]]" title="קפיץ ספירלי">
+<div created="20170601134704239" modified="20200217120935703" tags="[[אירי טוענת]] [[הכפר הגלובלי]]" title="קפיץ ספירלי">
 <pre>[img[pictures/kfitz-spirali.jpg]]
 
 [[אירי]]:
