--- a/english.html
+++ b/english.html
@@ -249,6 +249,8 @@ Error message and password prompt
 
 <li>$:/user/styles</li>
 
+<li>2 Da Vinci</li>
+
 <li>9-side-wishing-star</li>
 
 <li>A Fairy Tale's Mother</li>
@@ -8462,7 +8464,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The global village]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[2 Da Vinci]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8482,7 +8484,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217121047944" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217124914751" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8627,6 +8629,22 @@ a.translation:hover { text-decoration: underline }
 .tootdiv a {text-decoration: none; color: #f00}
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
+</div>
+<div created="20200217124916746" modified="20200217125410192" tags="[[Here in the Ghetto]] Metafiction Houses" title="2 Da Vinci">
+<pre>
+
+[img[pictures/da-vinci-2.jpg]]
+
+
+!!![[Tomer]]:
+
+It isn't nice to see a shutdown radio station, but when you live here in the ghetto, sometimes 2 Da Vinci Street is right along the way, and I'm sentimental, [[missing it|https://www.youtube.com/watch?v=SPg4IwGZMvM]].
+
+
+
+ &lt;&lt;heblink [[דה וינצ'י 2]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20200115163447032" modified="20200217121354541" tags="Metafiction [[The global village]]" title="9-side-wishing-star">
 <pre>!!![[Eva]]:
@@ -9867,7 +9885,7 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 
  &lt;&lt;heblink [[חשיפה לצפון]]&gt;&gt;</pre>
 </div>
-<div created="20200212162303735" modified="20200217121937207" tags="[[True stories]] [[Monkeys with car keys]] [[The global village]]" title="On the road to somewhere">
+<div created="20200212162303735" modified="20200217125156015" tags="[[True stories]] [[Monkeys with car keys]] [[The global village]]" title="On the road to somewhere">
 <pre>[img[pictures/baderech-lean.jpg]]
 
 &lt;&lt;list-links filter:&quot;[tag[On the road to somewhere]]&quot;&gt;&gt;
