--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הכפר הגלובלי]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217122131227" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217124837882" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11644,7 +11644,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20200217120425349" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="גלות">
+<div created="20170105170620001" modified="20200217125025924" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -11807,12 +11807,14 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20181103162256301" modified="20181108124204280" tags="[[כאן בגטו]] [[מטא בדיון]]" title="דה וינצ'י 2">
+<div created="20181103162256301" modified="20200217125051335" tags="[[כאן בגטו]] [[מטא בדיון]] בתים" title="דה וינצ'י 2">
 <pre>[img[pictures/da-vinci-2.jpg]]
 
 !!![[תומר]]:
 
-זה לא כל כך נעים לראות רדיו סגור, אבל כשאתה מתגורר כאן בגטו  לפעמים דה וינצ'י 2 זה בדרך, ואני רגשן [[מתגעגע|https://www.youtube.com/watch?v=SPg4IwGZMvM]].</pre>
+זה לא כל כך נעים לראות רדיו סגור, אבל כשאתה מתגורר כאן בגטו  לפעמים דה וינצ'י 2 זה בדרך, ואני רגשן [[מתגעגע|https://www.youtube.com/watch?v=SPg4IwGZMvM]].
+
+&lt;&lt;englink [[2 Da Vinci ]]&gt;&gt;</pre>
 </div>
 <div created="20170105154405192" modified="20200215220502704" tags="[[אחיות חוץ]] [[אירי טוענת]] מוזיקה סרטים" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
